src/Slide/Slide.module.css
.slide {
  height: 100%;
  min-width: 100%;
  max-width: 100%;
  margin: auto;
  padding: 0;
  object-fit: cover;
  overflow: auto;
  background: transparent;
  overflow-wrap: break-word;
  word-break: normal;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  user-select: auto;
  box-sizing: border-box;
}

